Trying to fix overflow on phones

--- a/src/components/background/background.scss
+++ b/src/components/background/background.scss
@@ -1,8 +1,8 @@
 .bg-background-container {
     position: fixed;
     inset: 0 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     overflow: hidden;
 }
 
