--- a/src/components/nav-bar/nav-bar.scss
+++ b/src/components/nav-bar/nav-bar.scss
@@ -14,6 +14,17 @@ $health-bar-height: clamp(2vw, calc($profile-image-size * 2 / 6), 4vw);
 $name-plate-width: calc($profile-image-size *2);
 $name-plate-height: calc($profile-image-size/5);
 
+.navbar-container {
+
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+
+}
+
+
 /*
 *   Health Bar
 */
@@ -142,6 +153,8 @@ $name-plate-height: calc($profile-image-size/5);
     left: 50%;
     transform: translate(-50%, 0);
     justify-content: center;
+    width: 100vw;
+    overflow: hidden;
 }
 
 /*
