--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,9 @@ body {
 }
 
 html, body {
-    height: 100%;
+    height: 100vh;
     width: 100%;
+    overflow: hidden;
     margin: 0;
     padding: 0;
 }
